# cifar10-cv-training

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
experiment_results/: all_results.json  report.html  summary.json
src/: __init__.py
src/data/: __init__.py  loader.py
src/models/: __init__.py  network.py  train.py
src/preprocessing/: __init__.py  image_process.py
src/utils/: __init__.py  helpers.py
